# position-based-fluids

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.sh  macos.yml
assets/: test-scene.blend
src/: alembic-manager-base.hpp  kernels.cpp  kernels.hpp  main.cpp  neighbor-search-engine.cpp  neighbor-search-engine.hpp  particle.hpp  particles-alembic-manager.hpp  types.hpp
